k3s/40-websites/20-tphc/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tphc
  namespace: default
spec:
  selector:
    app: tphc
  ports:
  - port: 80
    targetPort: website
