k3s/40-websites/20-tphc/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tphc
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    # cert-manager.io/issuer: freeipa-issuer
    # cert-manager.io/issuer-group: certmanager.freeipa.org
    # cert-manager.io/issuer-kind: ClusterIssuer
    # cert-manager.io/common-name: loki.k3s.i.stabl.one
spec:
  # tls:
  # - hosts:
  #   - loki.k3s.i.stabl.one
  #   secretName: loki-cert
  rules:
    - host: tphc.k3s.i.stabl.one
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: tphc
                port:
                 number: 80
